--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <div class="wrapper">
         <h1 class="title">The Open Movie Database</h1>
+        <p class="subtitle">please enter a movie name</p>
 
         <div class="wrapper-form">
             <input class="wrapper-form-input" type="text" placeholder="Enter a movie...">
@@ -36,7 +37,7 @@
         <div class="modal-overlay">
             <div class="modal-window">
                 <button class="close-btn">&#215;</button>
-                <img id="image" alt="poster">
+                <img id="image" alt="there should have been a poster">
                 <div class="info">
                     <h1 id="heading"></h1>
                     <h2 id="year"></h2>
